--- a/app/src/main/res/layout/activity_payments.xml
+++ b/app/src/main/res/layout/activity_payments.xml
@@ -42,7 +42,9 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="false"
-                android:gravity="center_vertical" />
+                android:gravity="center_vertical"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/payments_activity__user_spinner"
@@ -75,6 +77,7 @@
                 android:layout_weight="1"
                 android:gravity="start"
                 android:text="@string/payments_activity__total_sum"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -88,6 +91,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:gravity="end"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
