--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#26B4CF</color>
+    <color name="colorPrimaryDark">#112B38</color>
     <color name="colorAccent">#E0D4D4</color>
 
     <color name="colorError">#F10945</color>
