--- a/app/src/main/res/layout/activity_add_payment.xml
+++ b/app/src/main/res/layout/activity_add_payment.xml
@@ -26,7 +26,7 @@
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:gravity="center_vertical"
         android:hint="@string/add_payment_activity__shop"
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorAccent" />
 
