--- a/app/src/main/res/layout/activity_payments__add_dialog.xml
+++ b/app/src/main/res/layout/activity_payments__add_dialog.xml
@@ -29,7 +29,7 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:textColor="@color/colorPrimaryDark"></EditText>
 
         <LinearLayout
