added groups requests

--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -15,7 +15,7 @@
         android:layout_margin="15dp"
         android:ems="10"
         android:hint="@string/create_group_activity__group_name"
-        android:inputType="textPersonName"
+        android:inputType="textCapSentences"
         android:textColorHint="@color/colorAccent" />
 
     <Button
