--- a/app/src/main/res/layout/activity_payments.xml
+++ b/app/src/main/res/layout/activity_payments.xml
@@ -48,6 +48,14 @@
                 android:textStyle="bold" />
 
             <Spinner
+                android:id="@+id/payments_activity__group_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:visibility="visible" />
+
+            <Spinner
                 android:id="@+id/payments_activity__user_spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
